--- a/package.json
+++ b/package.json
@@ -1,45 +1,45 @@
 {
     "private": true,
     "dependencies": {
-        "@theia/callhierarchy": "^0.3.19",
-        "@theia/console": "^0.3.19",
-        "@theia/core": "^0.3.19",
-        "@theia/debug": "^0.3.19",
+        "typescript": "latest",
+        "@theia/callhierarchy": "next",
+        "@theia/console": "next",
+        "@theia/core": "next",
+        "@theia/debug": "next",
         "@theia/docker": "next",
-        "@theia/editor": "^0.3.19",
-        "@theia/editor-preview": "^0.3.19",
-        "@theia/editorconfig": "^0.3.19",
-        "@theia/extension-manager": "^0.3.19",
-        "@theia/file-search": "^0.3.19",
-        "@theia/filesystem": "^0.3.19",
-        "@theia/getting-started": "^0.3.19",
-        "@theia/git": "^0.3.19",
-        "@theia/json": "^0.3.19",
-        "@theia/keymaps": "^0.3.19",
-        "@theia/languages": "^0.3.19",
-        "@theia/markers": "^0.3.19",
-        "@theia/merge-conflicts": "^0.3.19",
-        "@theia/messages": "^0.3.19",
-        "@theia/metrics": "^0.3.19",
-        "@theia/mini-browser": "^0.3.19",
-        "@theia/monaco": "^0.3.19",
-        "@theia/navigator": "^0.3.19",
-        "@theia/outline-view": "^0.3.19",
-        "@theia/output": "^0.3.19",
-        "@theia/plugin-ext": "^0.3.19",
-        "@theia/plugin-ext-vscode": "^0.3.19",
-        "@theia/preferences": "^0.3.19",
-        "@theia/preview": "^0.3.19",
-        "@theia/process": "^0.3.19",
-        "@theia/python": "^0.3.19",
-        "python-debug": "1.0.0",
-        "@theia/search-in-workspace": "^0.3.19",
-        "@theia/task": "^0.3.19",
-        "@theia/terminal": "^0.3.19",
-        "@theia/textmate-grammars": "^0.3.19",  
-        "@theia/userstorage": "^0.3.19",
-        "@theia/variable-resolver": "^0.3.19",
-        "@theia/workspace": "^0.3.19",
+        "@theia/editor": "next",
+        "@theia/editor-preview": "next",
+        "@theia/editorconfig": "next",
+        "@theia/extension-manager": "next",
+        "@theia/file-search": "next",
+        "@theia/filesystem": "next",
+        "@theia/getting-started": "next",
+        "@theia/git": "next",
+        "@theia/json": "next",
+        "@theia/keymaps": "next",
+        "@theia/languages": "next",
+        "@theia/markers": "next",
+        "@theia/merge-conflicts": "next",
+        "@theia/messages": "next",
+        "@theia/metrics": "next",
+        "@theia/mini-browser": "next",
+        "@theia/monaco": "next",
+        "@theia/navigator": "next",
+        "@theia/outline-view": "next",
+        "@theia/output": "next",
+        "@theia/plugin-ext": "next",
+        "@theia/plugin-ext-vscode": "next",
+        "@theia/preferences": "next",
+        "@theia/preview": "next",
+        "@theia/process": "next",
+        "@theia/python": "next",
+        "@theia/search-in-workspace": "next",
+        "@theia/task": "next",
+        "@theia/terminal": "next",
+        "@theia/textmate-grammars": "next",  
+        "@theia/userstorage": "next",
+        "@theia/variable-resolver": "next",
+        "@theia/workspace": "next",
         "@theia/yaml": "next"
     },
     "devDependencies": {
