--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
     "dependencies": {
         "typescript": "latest",
         "@theia/callhierarchy": "next",
-        "@theia/console": "next",
         "@theia/core": "next",
-        "@theia/debug": "next",
+        "@theia/cpp": "next",
         "@theia/docker": "next",
         "@theia/editor": "next",
-        "@theia/editor-preview": "next",
         "@theia/editorconfig": "next",
+        "@theia/editor-preview": "next",
         "@theia/extension-manager": "next",
         "@theia/file-search": "next",
         "@theia/filesystem": "next",
-        "@theia/getting-started": "next",
         "@theia/git": "next",
+        "@theia/go": "next",
+        "@theia/getting-started": "next",
         "@theia/json": "next",
         "@theia/keymaps": "next",
         "@theia/languages": "next",
@@ -26,21 +26,28 @@
         "@theia/monaco": "next",
         "@theia/navigator": "next",
         "@theia/outline-view": "next",
+        "@theia/php": "next",
         "@theia/output": "next",
+        "@theia/plantuml": "next",
+        "@theia/plugin": "next",
         "@theia/plugin-ext": "next",
         "@theia/plugin-ext-vscode": "next",
         "@theia/preferences": "next",
         "@theia/preview": "next",
         "@theia/process": "next",
         "@theia/python": "next",
+        "@theia/rust": "next",
         "@theia/search-in-workspace": "next",
         "@theia/task": "next",
         "@theia/terminal": "next",
-        "@theia/textmate-grammars": "next",  
+        "@theia/textmate-grammars": "next",
+        "@theia/tslint": "next",
+        "@theia/typescript": "next",
         "@theia/userstorage": "next",
         "@theia/variable-resolver": "next",
         "@theia/workspace": "next",
-        "@theia/yaml": "next"
+        "@theia/yaml": "next",
+        "theia-yang-extension": "next"
     },
     "devDependencies": {
         "@theia/cli": "next"
