--- a/package.json
+++ b/package.json
@@ -51,5 +51,12 @@
     },
     "devDependencies": {
         "@theia/cli": "next"
+    },
+    "scripts": {
+        "postinstall": "download-debug-adapters"
+    },
+    "adapterDir": "plugins",
+    "adapters": {
+        "vscode-home-assistant": "https:///keesschollaart.gallery.vsassets.io/_apis/public/gallery/publisher/keesschollaart/extension/vscode-home-assistant/0.3.4/assetbyname/Microsoft.VisualStudio.Services.VSIXPackage"
     }
 }
