--- a/package.json
+++ b/package.json
@@ -57,6 +57,6 @@
     },
     "adapterDir": "plugins",
     "adapters": {
-        "vscode-home-assistant": "https://marketplace.visualstudio.com/_apis/public/gallery/publishers/keesschollaart/vsextensions/vscode-home-assistant/0.3.4/vspackage"
+        "vscode-home-assistant": "https://keesschollaart.gallery.vsassets.io/_apis/public/gallery/publisher/keesschollaart/extension/vscode-home-assistant/0.3.4/assetbyname/Microsoft.VisualStudio.Services.VSIXPackage"
     }
 }
