--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
         "@theia/userstorage": "next",
         "@theia/variable-resolver": "next",
         "@theia/workspace": "next",
-        "@theia/yaml": "next",
         "theia-yang-extension": "next"
     },
     "devDependencies": {
@@ -58,6 +57,6 @@
     "adapterDir": "plugins",
     "adapters": {
         "vscode-home-assistant": "https://keesschollaart.gallery.vsassets.io/_apis/public/gallery/publisher/keesschollaart/extension/vscode-home-assistant/0.3.4/assetbyname/Microsoft.VisualStudio.Services.VSIXPackage",
-        "gitlens": "https://eamodio.gallery.vsassets.io/_apis/public/gallery/publisher/eamodio/extension/gitlens/latest/assetbyname/Microsoft.VisualStudio.Services.VSIXPackage"
+        "redhat-yaml": "https://redhat.gallery.vsassets.io/_apis/public/gallery/publisher/redhat/extension/vscode-yaml/latest/assetbyname/Microsoft.VisualStudio.Services.VSIXPackage"
     }
 }
